bk_ida/gccida/g1/expand_end_case_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5725:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5726:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5727:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5728:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5737:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5738:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5741:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5749:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5750:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5751:4: error: expected ';' after expression
rtx v32; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5751:5: error: use of undeclared identifier 'v32'
rtx v32; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5754:4: error: expected ';' after expression
rtx v35; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5754:5: error: use of undeclared identifier 'v35'
rtx v35; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5759:4: error: expected ';' after expression
rtx j; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5759:5: error: use of undeclared identifier 'j'
rtx j; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5760:6: error: use of undeclared identifier 'p_table_label'; did you mean 'assemble_label'?
rtx *p_table_label; // rbx 
     ^~~~~~~~~~~~~
     assemble_label
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/output.h:310:13: note: 'assemble_label' declared here
extern void assemble_label              PARAMS ((const char *));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5760:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'void (const char *)')
rtx *p_table_label; // rbx 
~~~ ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5761:6: error: use of undeclared identifier 'v42'
rtx *v42; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/stmt.c:5762:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v43; // ebx 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_end_case_type/src/obj/stmt.o] Error 1
